refactor: move query logic from repository to service layer
This change moves business-related query logic out of the repository and into the service layer. It improves code organization, respects the separation of concerns, and aligns with best practices in domain-driven design.